test/sema/typeck/generic/argument-with-trait-bound.out
error: type `T` does not implement trait `Comparable`.
--> argument-with-trait-bound.dora:2:17
 | fn f[X: std::Comparable](x: X) {}
 | fn g[T](t: T) { f[T](t); }
                   ~~~~~~~
 | 
1 error found.
