test/sema/typeck/generic/argument-with-trait-bound.dora
fn f[X: std::Comparable](x: X) {}
fn g[T](t: T) { f[T](t); }
